Fix ui on firefox

--- a/3rdparty/jquery.ui/jquery-ui-bootstrap/jquery-ui.css
+++ b/3rdparty/jquery.ui/jquery-ui-bootstrap/jquery-ui.css
@@ -332,7 +332,7 @@
 .ui-state-highlight,
 .ui-state-error,
 .ui-state-default {
-	position: relative;
+	//position: relative;
 	border-width: 1px;
 	border-style: solid;
 }
